Archive2/a7/5069015f5843dd/output
main.cpp:9:3: error: no matching constructor for initialization of 'A'
A t = a;
  ^   ~
main.cpp:4:5: note: candidate constructor not viable: 1st argument ('const A') would lose const qualifier
    A(A&){ };
    ^
main.cpp:3:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    A(){ };
    ^
1 error generated.
